--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
 <div class="font"> 
-	<h1 class="my-header"> FUNKY 90s SCREENSAVER </h1></div>
+	<h1 class="my-header"> FUNKY 90s SCREENSAVER </h1>
+</div>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 	
 <div class="my-container">
   <h2><img src="images/bitchempty.jpg" alt="bitch empty" class="floatleft"/>Why my brain is incapable of functioning properly</h2>
