--- a/index.html
+++ b/index.html
@@ -3,35 +3,39 @@
 <head>
 <meta charset="utf-8">
 <title>my website</title>
-	<link rel="preconnect" href="https://fonts.gstatic.com"> 
-	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet" type="text/css">
+		<link rel="preconnect" href="https://fonts.gstatic.com"> 
+		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">	
+
+		<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<div class="font"> 
+<header class="font"> 
 	<h1 class="my-header"> FUNKY 90s SCREENSAVER </h1>
-</div>
+</header>
 
-<div class="topnav">
+<nav class="topnav">
   <a href="#home">Home</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
-</div>
-	
-<div class="my-container">
-  <h2><img src="images/bitchempty.jpg" alt="bitch empty" class="floatleft"/>Why my brain is incapable of functioning properly</h2>
-  <p>&nbsp;</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod&nbsp;</p>
-  <p>tempor incididunt ut labore et dolore magna aliqua. Mi quis hendrerit dolor magna eget est. Habitant morbi tristique senectus et netus et malesuada fames. Non tellus orci ac auctor augue mauris augue neque gravida. Tincidunt vitae semper quis lectus nulla at volutpat. Enim ut sem viverra aliquet. Odio ut sem nulla pharetra. Quis ipsum suspendisse ultrices dictum. Faucibus pulvinar elementum integer enim neque. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Erat pellentesque adipiscing commodo elit.</p>
-</div>
+</nav>
 
-<div class="my-container">
-  <h2><img src="images/unclebobby.jpg" alt="uncle bobby" class="floatleft"/>How I'm still pushing through </h2>
-  <p>&nbsp;</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi quis hendrerit dolor magna eget est. Habitant morbi tristique senectus et netus et malesuada fames. Non tellus orci ac auctor augue mauris augue neque gravida. Tincidunt vitae semper quis lectus nulla at volutpat. Enim ut sem viverra aliquet. Odio ut sem nulla pharetra. Quis ipsum suspendisse ultrices gravida dictum. Faucibus pulvinar elementum integer enim neque. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Erat pellentesque adipiscing commodo elit.</p>
-</div>
-	
-<p id="footer">&copy; Manouchka Theuns</p>	
+<section>
+  <div class="my-container">
+    <h2><img src="images/bitchempty.jpg" alt="bitch empty" class="floatleft"/>Why my brain is incapable of functioning properly</h2>
+    <p>&nbsp;</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod&nbsp;</p>
+    <p>tempor incididunt ut labore et dolore magna aliqua. Mi quis hendrerit dolor magna eget est. Habitant morbi tristique senectus et netus et malesuada fames. Non tellus orci ac auctor augue mauris augue neque gravida. Tincidunt vitae semper quis lectus nulla at volutpat. Enim ut sem viverra aliquet. Odio ut sem nulla pharetra. Quis ipsum suspendisse ultrices dictum. Faucibus pulvinar elementum integer enim neque. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Erat pellentesque adipiscing commodo elit.</p>
+  </div>
+
+  <div class="my-container">
+    <h2><img src="images/unclebobby.jpg" alt="uncle bobby" class="floatleft"/>How I'm still pushing through </h2>
+    <p>&nbsp;</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi quis hendrerit dolor magna eget est. Habitant morbi tristique senectus et netus et malesuada fames. Non tellus orci ac auctor augue mauris augue neque gravida. Tincidunt vitae semper quis lectus nulla at volutpat. Enim ut sem viverra aliquet. Odio ut sem nulla pharetra. Quis ipsum suspendisse ultrices gravida dictum. Faucibus pulvinar elementum integer enim neque. Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt id. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Erat pellentesque adipiscing commodo elit.</p>
+  </div>
+</section>  
+
+<footer id="footer">&copy; manouchka theuns </footer> 
+
 </body>
 </html>
