--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>my website</title>
-		<link rel="preconnect" href="https://fonts.gstatic.com"> 
-		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">	
-
+	<link rel="preconnect" href="https://fonts.gstatic.com"> 
+	<link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
